--- a/index.html
+++ b/index.html
@@ -35,39 +35,12 @@
             </section>
         </div>
 
+        <footer>
+            
+        </footer>
+        
+        <article class="contactFormContainer"></article>
     </main>
-    <footer>
-
-    </footer>
-
-    <article class="contactFormContainer">
-        <div id="contact__modal" class="modal--parent">
-            <div class="modal--content">
-                <h3>Contact Form</h3>
-                    <form action="">
-                        <fieldset>
-                            <label for="contact-name">Name</label>
-                            <input type="text" id="contact-name" name="contact-name">
-                        </fieldset>
-                        <fieldset>
-                            <label for="contact-email">Email</label>
-                            <input type="text" id="contact-email" name="contact-email">
-                        </fieldset>
-                        <fieldset>
-                            <label for="contact-phone">Phone: Format 555-555-5555</label>
-                            <input type="tel" id="contact-phone" name="ccontact-phone" pattern ="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-                            required>
-                        </fieldset>
-                        <fieldset>
-                            <label for="contact-message">Message</label>
-                            <textarea type="text" id="contact-message" name="contact-message"></textarea>
-                        </fieldset>
-                        <button id="contactSubmit">Submit</button>
-                    </form>
-                <button id="formModal--close">Close</button>
-            </div>
-        </div>
-    </article>
     <script type="module" src="./scripts/main.js"></script>
 </body>
 
