--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <ul class="navigation">
                     <li><a href="#">About</a></li>
                     <li><a href="#" id="contactLink">Contact</a></li>
+                    <li class="logOutLink"></li>
                 </ul>
             </nav>
         </header>
